--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,10 @@
 <meta name="HandheldFriendly" content="True">
 <meta name="MobileOptimized" content="320">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta property="og:site_name" content="Zhuoli Yin" />
+<meta property="og:title" content="Zhuoli Yin" />
+<meta property="og:description" content="Ph.D. Candidate in Industrial Engineering at Purdue University" />
+<meta name="author" content="Zhuoli Yin" />
 
 <script>
   document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
